feat(catalogue): change the order a product's images are shown in
